@@ -8,6 +8,7 @@
 	(PokerDatabaseTestCase.setUp): Added a tearDown() call just in
 	case cruft is left around.
 	(PokerDatabaseTestCase.test07_multipleRowsInVersionTable): Wrote function.
+	(PokerDatabaseTestCase.test08_forceTestDatabaseTooOld): Wrote function.
 
 2008-02-01  Bradley M. Kuhn  <bkuhn@ebb.org>
 
